manifests/deployment-jenkins.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: jenkins
  template:
    metadata:
      labels:
        pod: jenkins
    spec:
      volumes:
        - name: jenkins-home
          hostPath:
            path: /opt/apps/jenkins
            type: Directory
      containers:
        - name: jenkins
          image: mwdomino/jenkins
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    pod: jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: jenkins.dominey.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 80
  tls:
  - hosts:
    - jenkins.dominey.cloud
    secretName: jenkins-dominey-cloud-tls
